k8s/100-ehpc-io/main-page-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: main-page-httproute
  namespace: ehpc-io
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "ehpc.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-page-service
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: compression-sf
